sumo/tests/traci/MoveNode/InvalidPositionFormat/output.traci
***Starting server on port 8826 ***
